--- a/css/index.css
+++ b/css/index.css
@@ -29,6 +29,11 @@ article {
 .image-article img {
     width: 100%;
 }
+.content-article h2 {
+    font-size: 1.5em;
+    text-transform: capitalize;
+    font-weight: normal;
+}
 .content-article h2 a {
     text-decoration: none;
     color: #fd007b;
